Doing some tests with alpha transparent windows
git-svn-id: https://appetizer.googlecode.com/svn@385 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -215,6 +215,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\CustomAlphaWidget.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\FilePaths.cpp"
 				>
 			</File>
@@ -444,6 +448,10 @@
 			</File>
 			<File
 				RelativePath=".\Constants.h"
+				>
+			</File>
+			<File
+				RelativePath=".\CustomAlphaWidget.h"
 				>
 			</File>
 			<File
