Done Qt Gettext manager
git-svn-id: https://appetizer.googlecode.com/svn@396 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -459,6 +459,10 @@
 					RelativePath=".\gettext_lib\MoParser.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\gettext_lib\QtGettext.cpp"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -607,6 +611,10 @@
 				</File>
 				<File
 					RelativePath=".\gettext_lib\MoParser.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gettext_lib\QtGettext.h"
 					>
 				</File>
 			</Filter>
