Created class to get language and country names, and improved loading of properties in Config dialog
git-svn-id: https://appetizer.googlecode.com/svn@402 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -471,6 +471,10 @@
 					RelativePath=".\gettext_lib\QtGettext.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\gettext_lib\QtLocaleUtil.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="dialogs"
@@ -635,6 +639,10 @@
 				</File>
 				<File
 					RelativePath=".\gettext_lib\QtGettext.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gettext_lib\QtLocaleUtil.h"
 					>
 				</File>
 			</Filter>
