Created function to convert old string place markers (%s, %d, etc.) to new ones compatible with QString::arg (%1, %2, etc.). Cleaned up User settings.
git-svn-id: https://appetizer.googlecode.com/svn@404 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -332,6 +332,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utils\StringUtil.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\utils\VectorUtil.cpp"
 					>
 				</File>
@@ -583,6 +587,10 @@
 				</File>
 				<File
 					RelativePath=".\utils\NineSlicePainter.h"
+					>
+				</File>
+				<File
+					RelativePath=".\utils\StringUtil.h"
 					>
 				</File>
 				<File
