--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -25,6 +25,8 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				Description="Generating version info and incrementing build number..."
+				CommandLine="resources\\CreateResources.exe"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -46,7 +48,7 @@
 				AdditionalOptions="-Zm200 -w34100 -w34189 -w34100 -w34189"
 				Optimization="4"
 				AdditionalIncludeDirectories="c:\Qt\2010.02.1\qt\include\QtCore;c:\Qt\2010.02.1\qt\include\QtGui;c:\Qt\2010.02.1\qt\include;c:\Qt\2010.02.1\qt\include\ActiveQt;tmp\moc\debug_static;&quot;c:\Qt\2010.02.1\qt\mkspecs\win32-msvc2008&quot;;.;./gui;./utils;./third_party;./guilib;./dialogs"
-				PreprocessorDefinitions="_WINDOWS;UNICODE;WIN32;QT_LARGEFILE_SUPPORT;QT_GUI_LIB;QT_CORE_LIB;QT_THREAD_SUPPORT;__WINDOWS__;__DEBUG__"
+				PreprocessorDefinitions="_WINDOWS;UNICODE;_UNICODE;WIN32;QT_LARGEFILE_SUPPORT;QT_GUI_LIB;QT_CORE_LIB;QT_THREAD_SUPPORT;__WINDOWS__;__DEBUG__"
 				GeneratePreprocessedFile="0"
 				ExceptionHandling="1"
 				RuntimeLibrary="3"
@@ -77,7 +79,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				AdditionalOptions="&quot;/MANIFESTDEPENDENCY:type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos; processorArchitecture=&apos;*&apos;&quot; &quot;/MANIFESTDEPENDENCY:type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos; processorArchitecture=&apos;*&apos;&quot;"
-				AdditionalDependencies="c:\Qt\2010.02.1\qt\lib\qtmaind.lib c:\Qt\2010.02.1\qt\lib\QtGuid.lib c:\Qt\2010.02.1\qt\lib\QtCored.lib gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib advapi32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib"
+				AdditionalDependencies="c:\Qt\2010.02.1\qt\lib\qtmaind.lib c:\Qt\2010.02.1\qt\lib\QtGuid.lib c:\Qt\2010.02.1\qt\lib\QtCored.lib gdi32.lib comdlg32.lib oleaut32.lib imm32.lib winmm.lib winspool.lib ws2_32.lib ole32.lib user32.lib advapi32.lib msimg32.lib shell32.lib kernel32.lib uuid.lib version.lib"
 				OutputFile="Appetizer.exe"
 				SuppressStartupBanner="true"
 				AdditionalLibraryDirectories="c:\Qt\2010.02.1\qt\lib,c:\Qt\2010.02.1\qt\lib"
@@ -340,6 +342,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utils\VersionInfo.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\utils\XmlUtil.cpp"
 					>
 				</File>
@@ -598,6 +604,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utils\VersionInfo.h"
+					>
+				</File>
+				<File
 					RelativePath=".\utils\XmlUtil.h"
 					>
 				</File>
@@ -663,6 +673,10 @@
 				</File>
 			</Filter>
 		</Filter>
+		<File
+			RelativePath=".\resources\resources.rc"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
