Done message box helper class
git-svn-id: https://appetizer.googlecode.com/svn@406 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -330,6 +330,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utils\MessageBoxes.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\utils\NineSlicePainter.cpp"
 					>
 				</File>
@@ -589,6 +593,10 @@
 				</File>
 				<File
 					RelativePath=".\utils\IconUtil.h"
+					>
+				</File>
+				<File
+					RelativePath=".\utils\MessageBoxes.h"
 					>
 				</File>
 				<File
