UserSettings now emit signal when changed. Started implementing save and cancel buttons on Config dialog.
git-svn-id: https://appetizer.googlecode.com/svn@408 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -453,6 +453,10 @@
 					RelativePath=".\moc\moc_ScrollPane.cpp"
 					>
 				</File>
+				<File
+					RelativePath=".\moc\moc_UserSettings.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="guilib"
