Started button bar
git-svn-id: https://appetizer.googlecode.com/svn@412 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -270,6 +270,14 @@
 				Name="gui"
 				>
 				<File
+					RelativePath=".\gui\FloatingButton.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\FloatingButtonBar.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\gui\FolderItemSprite.cpp"
 					>
 				</File>
@@ -547,6 +555,14 @@
 			<Filter
 				Name="gui"
 				>
+				<File
+					RelativePath=".\gui\FloatingButton.h"
+					>
+				</File>
+				<File
+					RelativePath=".\gui\FloatingButtonBar.h"
+					>
+				</File>
 				<File
 					RelativePath=".\gui\FolderItemSprite.h"
 					>
