Restoring commits messed up by git svn: 7140f0a HEAD@{3}: commit: Cached pixmap in NineSliceItem for faster rendering. 00fd768 HEAD@{4}: commit: Done faster dropdown shadow 9772e5b HEAD@{5}: commit: Started implementing more efficient shadows, and created utility class for image manipulation a5f7aa8 HEAD@{6}: commit: Made FolderItemSprite to inherits from Button base class de6d19e HEAD@{7}: commit: Improved eject icon e30a546 HEAD@{8}: commit: Implemented floating button icons and improved minimize method bff4f33 HEAD@{9}: commit: Removed unused files 22bcab3 HEAD@{10}: commit: Rollover and Down effect on floating buttons 46524c0 HEAD@{11}: commit: Started implementing floating bar buttons, and created function to schedule the application closing 9ddc7b9 HEAD@{12}: commit: Added custom Qt debug message handler f87c84c HEAD@{13}: commit: Creating abstract class for buttons
git-svn-id: https://appetizer.googlecode.com/svn@419 ff61cf6c-2836-11df-8847-f3d5e5ef3dde

--- a/branches/QtVersion/Appetizer.vcproj
+++ b/branches/QtVersion/Appetizer.vcproj
@@ -338,6 +338,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utils\ImagingUtil.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\utils\MessageBoxes.cpp"
 					>
 				</File>
@@ -422,7 +426,15 @@
 				Name="_moc"
 				>
 				<File
+					RelativePath=".\moc\moc_Application.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\moc\moc_ConfigDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\moc\moc_FloatingButtonBar.cpp"
 					>
 				</File>
 				<File
@@ -430,7 +442,15 @@
 					>
 				</File>
 				<File
+					RelativePath=".\moc\moc_GraphicsButtonBase.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\moc\moc_GraphicsItem.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\moc\moc_GraphicsShadowItem.cpp"
 					>
 				</File>
 				<File
@@ -470,11 +490,19 @@
 				Name="guilib"
 				>
 				<File
+					RelativePath=".\guilib\GraphicsButtonBase.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\guilib\GraphicsItem.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\guilib\GraphicsScene.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\guilib\GraphicsShadowItem.cpp"
 					>
 				</File>
 				<File
@@ -616,6 +644,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\utils\ImagingUtil.h"
+					>
+				</File>
+				<File
 					RelativePath=".\utils\MessageBoxes.h"
 					>
 				</File>
@@ -660,11 +692,19 @@
 				Name="guilib"
 				>
 				<File
+					RelativePath=".\guilib\GraphicsButtonBase.h"
+					>
+				</File>
+				<File
 					RelativePath=".\guilib\GraphicsItem.h"
 					>
 				</File>
 				<File
 					RelativePath=".\guilib\GraphicsScene.h"
+					>
+				</File>
+				<File
+					RelativePath=".\guilib\GraphicsShadowItem.h"
 					>
 				</File>
 				<File
